--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     },
     "scripts": {
         "build": "nx run-many -t build",
-        "docker:build-workspace": "docker compose build --push base && docker compose build --push workspace",
+        "docker:build-workspace": "docker compose build base && docker compose build workspace",
         "docker:build": "npm run docker:build-workspace && nx affected --base master -t build-image",
         "lint": "nx run-many -t lint",
         "test": "nx run-many -t test",
@@ -38,6 +38,7 @@
         "@directus/types": "^10.1.5",
         "@nx/cypress": "17.1.3",
         "@nx/esbuild": "17.1.3",
+        "@nx/eslint": "17.1.3",
         "@nx/eslint-plugin": "17.1.3",
         "@nx/jest": "17.1.3",
         "@nx/js": "17.1.3",
@@ -45,6 +46,7 @@
         "@nx/node": "17.1.3",
         "@nx/react": "17.1.3",
         "@nx/workspace": "17.1.3",
+        "@swc-node/register": "~1.6.7",
         "@swc/cli": "~0.1.62",
         "@swc/core": "1.3.99",
         "@testing-library/react": "14.0.0",
@@ -53,8 +55,8 @@
         "@types/node": "18.14.2",
         "@types/node-cron": "^3.0.7",
         "@types/pg": "^8.10.2",
-        "@types/react": "18.2.24",
-        "@types/react-dom": "18.2.9",
+        "@types/react": "18.2.33",
+        "@types/react-dom": "18.2.14",
         "@typescript-eslint/eslint-plugin": "6.9.1",
         "@typescript-eslint/parser": "6.9.1",
         "autoprefixer": "^10.4.14",
@@ -84,8 +86,7 @@
         "ts-jest": "29.1.0",
         "ts-node": "10.9.1",
         "typescript": "5.2.2",
-        "vitepress": "1.0.0-rc.20",
-        "@nx/eslint": "17.1.3"
+        "vitepress": "1.0.0-rc.20"
     },
     "dependencies": {
         "@fastify/swagger": "^8.8.0",
