build(docker): added caching via registry

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 DOCKER_REGISTRY=justin.konratts.de
 ORGANIZATION=codesdowork
 PROJECT=monorepo-private
+IMAGE_BASE=${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}
+CACHE_DIR=cache
+CACHE_BASE=${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}/${CACHE_DIR}
