--- a/apps/server/backup-service/package.json
+++ b/apps/server/backup-service/package.json
@@ -2,7 +2,8 @@
     "name": "backup-service",
     "version": "1.0.0",
     "scripts": {
-        "build-image": "docker compose -f ../docker-compose.yml build --push backup-service",
+        "build-image": "cross-env $COMPOSE=\"docker compose -f ../docker-compose.yml\" $SERVICE=backup-service npm run build-and-push",
+        "build-and-push": "cross-env-shell \"$COMPOSE build --builder container $SERVICE && $COMPOSE push $SERVICE\"",
         "run-image": "docker compose -f ../docker-compose.yml up -d backup-service"
     }
 }
