--- a/apps/server/documentation/package.json
+++ b/apps/server/documentation/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "description": "This package provides documentation for the server",
     "scripts": {
-        "build-image": "docker compose -f ../docker-compose.yml build --push documentation",
+        "build-image": "cross-env $COMPOSE=\"docker compose -f ../docker-compose.yml\" $SERVICE=documentation npm run build-and-push",
+        "build-and-push": "cross-env-shell \"$COMPOSE build --builder container $SERVICE && $COMPOSE push $SERVICE\"",
         "run-image": "docker compose -f ../docker-compose.yml up -d documentation"
     }
 }
