--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     },
     "scripts": {
         "build": "nx run-many -t build",
-        "docker:build-workspace": "docker compose build base && docker compose build workspace",
+        "docker:build-workspace": "docker compose build --builder container base && docker compose build --builder container workspace && docker compose push",
         "docker:build": "npm run docker:build-workspace && nx affected --base master -t build-image",
+        "docker:builder": "docker buildx create --name container --driver=docker-container",
         "lint": "nx run-many -t lint",
         "test": "nx run-many -t test",
         "format": "nx format",
