ci(sonar): exlcude webssh from analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,3 @@
 sonar.projectKey=codesdowork_monorepo-private_AYxdBCtRHUgC-gShUh97
 sonar.qualitygate.wait=true
+sonar.exclusions=apps/server/ssh/webssh/**
