--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ docker:
     - nr docker:build-workspace
     - nx affected -t build-image
   only:
-    - ${MASTER_BRANCH}
+    - "${MASTER_BRANCH}"
 
 deploy:
   image: ringcentral/sshpass
@@ -91,4 +91,4 @@ deploy:
     - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/docker-compose.yml pull
     - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/docker-compose.yml up -d --remove-orphans
   only:
-    - ${MASTER_BRANCH}
+    - "${MASTER_BRANCH}"
