--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,3 @@
-variables:
-  NODE_IMAGE: node:20-alpine
-
 stages:
   - nx
   - sonarqube
@@ -15,7 +12,7 @@ stages:
   - nci
 
 nx-workspace:
-  image: ${NODE_IMAGE}
+  image: node:20-alpine
   stage: nx
   cache:
     key: ${CI_PIPELINE_ID}
@@ -45,7 +42,7 @@ sonarqube-check:
   allow_failure: true
 
 docker:
-  image: ${NODE_IMAGE}
+  image: docker:24.0.7
   services:
     - name: docker:24.0.7-dind
       alias: docker
@@ -57,6 +54,7 @@ docker:
   variables:
     DOCKER_HOST: tcp://docker:2375
   before_script:
+    - apk add npm
     - *nx-install
     - apk add docker docker-cli-compose
   script:
