--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,14 +45,16 @@ docker:
   image: docker:24.0.7
   services:
     - name: docker:24.0.7-dind
-      alias: docker
+      alias: docker-service
   stage: docker
   cache:
     key: ${CI_PIPELINE_ID}
     paths:
       - node_modules
   variables:
-    DOCKER_HOST: tcp://localhost:2375
+    DOCKER_DRIVER: overlay2
+    DOCKER_HOST: tcp://docker-service:2375/
+    DOCKER_TLS_CERTDIR: ""
   before_script:
     - apk add npm
     - *nx-install
