--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 stages:
   - nx
-  - sonarqube
+  - checks
   - docker
   - deploy
 
@@ -26,11 +26,11 @@ nx-workspace:
     - npx nx affected -t test
     - npx nx affected -t build
 
-sonarqube-check:
+sonarqube-scanner:
   image:
     name: sonarsource/sonar-scanner-cli:latest
     entrypoint: [""]
-  stage: sonarqube
+  stage: checks
   variables:
     SONAR_USER_HOME: ${CI_PROJECT_DIR}/.sonar # Defines the location of the analysis task cache
   cache:
@@ -95,6 +95,7 @@ deploy:
     # pull and run docker containers
     - ssh ${SSH_USER}@${SSH_HOST} docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
     - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/docker-compose.yml pull
+    - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/docker-compose.yml up renovate
     - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/docker-compose.yml up -d --remove-orphans
   only:
     - master
