--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -342,15 +342,12 @@ services:
   renovate:
     build:
       <<: *build-args
-      cache_from:
-        - type=registry,ref=${CACHE_BASE}/server-renovate
-      cache_to:
-        - type=registry,ref=${CACHE_BASE}/server-renovate,mode=max,compression=zstd
       context: ./renovate
     container_name: renovate
     environment:
       - RENOVATE_TOKEN=${RENOVATE_TOKEN}
       - GIT_URL=https://${DOMAIN}${GITLAB_BASE}
+      - GITHUB_COM_TOKEN=${RENOVATE_GITHUB_COM_TOKEN}
     image: ${IMAGE_BASE}/server-renovate
 
   scoreboard:
