--- a/apps/server/scoreboard/package.json
+++ b/apps/server/scoreboard/package.json
@@ -2,8 +2,8 @@
     "name": "scoreboard",
     "version": "1.0.0",
     "scripts": {
-        "build-image": "cross-env $COMPOSE=\"docker compose -f ../docker-compose.yml\" $SERVICE=scoreboard npm run build-and-push",
-        "build-and-push": "cross-env-shell \"$COMPOSE build --builder container $SERVICE && $COMPOSE push $SERVICE\"",
+        "build-image": "cross-env COMPOSE='docker compose -f ../docker-compose.yml' SERVICE=scoreboard npm run build-and-push",
+        "build-and-push": "cross-env-shell '$COMPOSE build --builder container $SERVICE && $COMPOSE push $SERVICE'",
         "run-image": "docker compose -f ../docker-compose.yml up -d scoreboard"
     }
 }
