feat(server): add off-at-night profile and bitwarden service

--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -224,3 +224,16 @@ server {
         proxy_pass http://$upstream;
     }
 }
+
+server {
+    set_by_lua_block $bitwarden_port { return os.getenv("BITWARDEN_PORT") }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name just-bw.konratts.de;
+
+    location / {
+        set $upstream bitwarden:$bitwarden_port;
+        proxy_pass http://$upstream;
+    }
+}
