--- a/apps/server/ssh/package.json
+++ b/apps/server/ssh/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "scripts": {
         "build-image": "cross-env COMPOSE=\"docker compose -f ../docker-compose.yml\" SERVICE=ssh npm run build-and-push",
-        "build-and-push": "cross-env-shell \"$COMPOSE build --builder container $SERVICE && $COMPOSE push $SERVICE\"",
+        "build-and-push": "cross-env-shell \"$COMPOSE build $SERVICE && $COMPOSE push $SERVICE\"",
         "run-image": "docker compose -f ../docker-compose.yml up -d ssh"
     }
 }
