--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,7 +69,7 @@ build-renovate:
   <<: *docker
   stage: renovate
   script:
-    - npx nx affected -t build-image --exclude="*,!server-renovate"
+    - npx nx affected -t build-image --exclude="*,!renovate"
   except:
     - master
 
@@ -77,8 +77,8 @@ run-renovate:
   <<: *ssh
   stage: renovate
   script:
-    - scp ./apps/server/docker-compose-renovate.yml ${SSH_USER}@${SSH_HOST}:${SSH_PATH}/
-    - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/docker-compose-renovate.yml up --pull always renovate
+    - scp ./apps/docker-compose.yml ${SSH_USER}@${SSH_HOST}:${SSH_PATH}/renovate
+    - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/renovate/docker-compose.yml up --pull always renovate
   except:
     - master
 
@@ -113,6 +113,6 @@ deploy:
     # pull and run docker containers
     - ssh ${SSH_USER}@${SSH_HOST} docker login -u ${DOCKER_REGISTRY_USER} -p ${DOCKER_REGISTRY_PASSWORD} ${DOCKER_REGISTRY}
     - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/docker-compose.yml pull
-    - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/docker-compose.yml --profile always --profile day up -d
+    - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/docker-compose.yml --profile always --profile day up -d --remove-orphans
   only:
     - master
