--- a/apps/renovate/Dockerfile
+++ b/apps/renovate/Dockerfile
@@ -2,8 +2,8 @@ ARG DOCKER_REGISTRY
 ARG ORGANIZATION
 ARG PROJECT
 
-ARG APP_NAME=server-renovate
-ARG APP_DIR=server/renovate
+ARG APP_NAME=renovate
+ARG APP_DIR=renovate
 
 FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/base AS base
 FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/workspace AS workspace
