--- a/apps/server/backup-service/package.json
+++ b/apps/server/backup-service/package.json
@@ -2,8 +2,7 @@
     "name": "backup-service",
     "version": "1.0.0",
     "scripts": {
-        "build-image": "cross-env COMPOSE=\"docker compose -f ../docker-compose.yml\" SERVICE=backup-service npm run build-and-push",
-        "build-and-push": "cross-env-shell \"$COMPOSE build $SERVICE && $COMPOSE push $SERVICE\"",
+        "build-image": "docker compose -f ../docker-compose.yml build backup-service --push",
         "run-image": "docker compose -f ../docker-compose.yml up -d backup-service"
     }
 }
