--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -284,7 +284,7 @@ services:
     restart: unless-stopped
     volumes:
       - navidrome-data:/data
-      - ${MUSIC_VOLUME:-music}:/music:ro
+      - ${MUSIC_VOLUME:-./music}:/music:ro
 
   music-downloader:
     build:
