--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -78,13 +78,13 @@ services:
       - SIGNUPS_ALLOWED=false
       - ADMIN_TOKEN=${BITWARDEN_ADMIN_TOKEN}
       - INVITATION_ORG_NAME=Bitwarden
-      - SMTP_HOST=smtp.gmail.com
+      - SMTP_HOST=${SMTP_HOST}
       - SMTP_FROM=no-reply@${BITWARDEN_DOMAIN}
       - SMTP_FROM_NAME=Bitwarden
-      - SMTP_PORT=587
+      - SMTP_PORT=${SMTP_PORT}
       - SMTP_SECURITY=starttls
-      - SMTP_USERNAME=${BITWARDEN_SMTP_USERNAME}
-      - SMTP_PASSWORD=${BITWARDEN_SMTP_PASSWORD}
+      - SMTP_USER=${SMTP_USER}
+      - SMTP_PASSWORD=${SMTP_PASSWORD}
     image: vaultwarden/server:alpine
     networks:
       - bitwarden
@@ -175,6 +175,16 @@ services:
         nginx['enable'] = true
         nginx['listen_https'] = false
         nginx['listen_port'] = ${GITLAB_PORT}
+        gitlab_rails['smtp_enable'] = true
+        gitlab_rails['smtp_address'] = "${SMTP_HOST}"
+        gitlab_rails['smtp_port'] = ${SMTP_PORT}
+        gitlab_rails['smtp_user_name'] = "${SMTP_USER}"
+        gitlab_rails['smtp_password'] = "${SMTP_PASSWORD}"
+        gitlab_rails['smtp_domain'] = "${SMTP_HOST}"
+        gitlab_rails['smtp_authentication'] = "login"
+        gitlab_rails['smtp_enable_starttls_auto'] = true
+        gitlab_rails['smtp_tls'] = false
+        gitlab_rails['smtp_openssl_verify_mode'] = 'peer'
         gitlab_rails['omniauth_enabled'] = true
         gitlab_rails['omniauth_allow_single_sign_on'] = ['openid_connect']
         gitlab_rails['omniauth_block_auto_created_users'] = false
@@ -240,6 +250,11 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
 
   grafana:
+    environment:
+      - GF_SMTP_ENABLED=true
+      - GF_SMTP_HOST=${SMTP_HOST}
+      - GF_SMTP_USER=${SMTP_USER}
+      - GF_SMTP_PASSWORD=${SMTP_PASSWORD}
     healthcheck:
       test: curl -fs http://localhost:${GRAFANA_PORT}/api/health | grep "ok" || exit 1
     image: grafana/grafana
