--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -252,7 +252,7 @@ services:
   grafana:
     environment:
       - GF_SMTP_ENABLED=true
-      - GF_SMTP_HOST=${SMTP_HOST}
+      - GF_SMTP_HOST=${SMTP_HOST}:${SMTP_PORT}
       - GF_SMTP_USER=${SMTP_USER}
       - GF_SMTP_PASSWORD=${SMTP_PASSWORD}
     healthcheck:
@@ -431,11 +431,6 @@ services:
       - SONAR_JDBC_PASSWORD=${DB_PASSWORD}
       - SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonarqube
       - SONAR_WEB_CONTEXT=${SONARQUBE_BASE}
-      - SONAR_EMAIL_SMTP_HOST=${SMTP_HOST}
-      - SONAR_EMAIL_SMTP_PORT=${SMTP_PORT}
-      - SONAR_EMAIL_SMTP_USER=${SMTP_USER}
-      - SONAR_EMAIL_SMTP_PASSWORD=${SMTP_PASSWORD}
-      - SONAR_EMAIL_SMTP_SECURE_CONNECTION=starttls
     healthcheck:
       test: wget -qO- http://localhost:9000${SONARQUBE_BASE}/api/system/status | grep -q -e '"status":"UP"' -e '"status":"DB_MIGRATION_NEEDED"' -e '"status":"DB_MIGRATION_RUNNING"' || exit 1
     image: sonarqube:9-community
