--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -83,7 +83,7 @@ services:
       - SMTP_FROM_NAME=Bitwarden
       - SMTP_PORT=${SMTP_PORT}
       - SMTP_SECURITY=starttls
-      - SMTP_USER=${SMTP_USER}
+      - SMTP_USERNAME=${SMTP_USER}
       - SMTP_PASSWORD=${SMTP_PASSWORD}
     image: vaultwarden/server:alpine
     networks:
