--- a/apps/server/scoreboard/Dockerfile
+++ b/apps/server/scoreboard/Dockerfile
@@ -32,4 +32,6 @@ ENV NODE_ENV production
 COPY --from=builder /app/dist/apps/$APP_DIR .
 COPY --from=deps /app/node_modules ./node_modules
 
+USER node
+
 ENTRYPOINT npm start
