--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,7 +77,7 @@ run-renovate:
   <<: *ssh
   stage: renovate
   script:
-    - scp ./apps/docker-compose.yml ${SSH_USER}@${SSH_HOST}:${SSH_PATH}/renovate
+    - scp ./apps/renovate/docker-compose.yml ${SSH_USER}@${SSH_HOST}:${SSH_PATH}/renovate
     - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/renovate/docker-compose.yml up --pull always renovate
   except:
     - master
