feat(server-prometheus): restart unless stopped

--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -410,6 +410,7 @@ services:
       - monitoring
     profiles:
       - day
+    restart: unless-stopped
     volumes:
       - prometheus-data:/prometheus
 
